--- a/RaspRemoteOSX/Info.plist
+++ b/RaspRemoteOSX/Info.plist
@@ -6,10 +6,10 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>Mads.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<key>CFBundleIconFile</key>
+	<string>RaspRemote_Green</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
